# fabric_erp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fix_indentation.py  pyproject.toml  requirements.txt  validation_report.json
.github/workflows/: ci.yml  validate.yml
DOCS/: ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md  CODING_STANDARD.md  PROJECT_MASTER_PLAN.md  ROADMAP.md
DOCS/governance/: BRANCH_POLICY.md  CODE_REVIEW_POLICY.md  DEFINITION_OF_DONE.md  DEVELOPMENT_POLICY.md  DOCUMENTATION_POLICY.md  RELEASE_POLICY.md  SECURITY_POLICY.md
DOCS/specifications/: AUDIT_TRAIL_SPEC.md  FINANCIAL_DIMENSIONS_SPEC.md  INTEGRATION_ENGINE_SPEC.md  INVENTORY_ENGINE_SPEC.md  NOTIFICATION_ENGINE_SPEC.md  NUMBERING_ENGINE_SPEC.md  POSTING_ENGINE_SPEC.md  PRICING_ENGINE_SPEC.md  RBAC_SPEC.md  REPORTING_ENGINE_SPEC.md  TAX_ENGINE_SPEC.md  WORKFLOW_ENGINE_SPEC.md
apps/authentication/: admin.py  apps.py  events.py  signals.py  urls.py
apps/common/: admin.py  apps.py  constants.py  context_processors.py
apps/inventory/: urls.py  views.py
core/: api.py  asgi.py  base.py  wsgi.py
core/events/: __init__.py  dispatcher.py  event_store.py  handlers.py
core/settings/: base.py  development.py  logging.py  production.py
core/urls/: __init__.py  api.py  base.py
fixtures/: feature_flags.json  initial_data.json  permission_categories.json  system_permissions.json
libs/: exceptions.py  pagination.py  response.py  validators.py
logs/: .gitkeep
scripts/: backup_db.sh  deploy.sh  restore_db.sh
templates/: account_locked.html  base.html  change_password.html  dashboard.html  forgot_password.html  login.html  resend_verification.html  reset_password.html  splash.html
templates/emails/: email_verification.html  password_reset.html
templates/permissions/: delete.html  list.html
templates/roles/: add.html  assign_permissions.html  delete.html  edit.html  list.html
templates/users/: add.html  edit.html  (+2 more)
tools/: README.md  __init__.py  __main__.py  repository_validator.py  run_validator.bat
(+67 files in other folders)
